Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-11611

PATCH: Fix cleanup in LsarRetrievePrivateData()

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.2
    • None

    Description

      In LsarRetrievePrivateData we're just freeing EncCurrentValue and closing SecretObject in the failure path. It could happen in the non failure one too.
      Move them outside.

      This also fixes CID 1363457

      Attachments

        Activity

          People

            ekohl ekohl
            vicmarcal vicmarcal
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: