[LSASRV] Fix cleanup in LsarRetrievePrivateData(). Modified patch by Victor Martinez Calvo. CORE-11611 #resolve #comment Thanks a lot!

svn path=/trunk/; revision=71952